--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "@solana/web3.js": "^1.87.6",
     "axios": "^1.6.2",
+    "buffer": "^6.0.3",
     "ethers": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
