--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
     "ethers": "^6.9.0",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
